# multi-agent-core

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: research_run.py  simple_run.py  use_from_another_project.py
scripts/: install_codex_skills.py
skills/: README.md
skills/ads-creative-strategist/: SKILL.md
skills/api-tester/: SKILL.md
skills/backend-architect/: SKILL.md
skills/backend-scaffold/: SKILL.md
skills/bot-conversation-designer/: SKILL.md
skills/competitor-researcher/: SKILL.md
skills/conversion-auditor/: SKILL.md
skills/cto-orchestrator/: SKILL.md
skills/discovery-call-planner/: SKILL.md
skills/follow-up-sequence-writer/: SKILL.md
skills/frontend-developer/: SKILL.md
skills/frontend-page-starter/: SKILL.md
skills/homepage-optimizer/: SKILL.md
skills/landing-page-copywriter/: SKILL.md
skills/lead-qualification/: SKILL.md
skills/marketing-specialist/: SKILL.md
skills/media-buyer-planner/: SKILL.md
skills/mobile-ux-reviewer/: SKILL.md
skills/objection-handler/: SKILL.md
skills/offer-positioning/: SKILL.md
skills/project-bootstrap/: SKILL.md
skills/qa-specialist/: SKILL.md
skills/repo-operator/: SKILL.md
skills/sales-funnel-designer/: SKILL.md
skills/sales-script-writer/: SKILL.md
skills/security-engineer/: SKILL.md
skills/seo-page-brief-writer/: SKILL.md
skills/service-page-writer/: SKILL.md
skills/social-content-planner/: SKILL.md
skills/telegram-bot-builder/: SKILL.md
skills/ui-designer/: SKILL.md
skills/ux-architect/: SKILL.md
src/multi_agent_core/: api.py  (+8 more)
tests/: test_smoke.py
(+36 files in other folders)
