[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-core"
version = "0.1.0"
description = "A tiny standard-library multi-agent orchestration library."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
